[tool.poetry]
name = "users-db"
version = "0.0.15"
description = "user_db is a database package for user CRUD operations"
authors = ["Bohdan Stratila <bogdanstratila@icloud.com>"]
readme = "README.md"
packages = [{include = "users_db"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
alembic = "1.9.4"
pytest = "7.2.1"
black = "23.1.0"
flake8 = "6.0.0"
psycopg2-binary = "2.9.5"
click = "^8.1.3"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
alembic_upgrade = 'users_db.commands:db_upgrade_cmd'
alembic_downgrade = 'users_db.commands:db_downgrade_cmd'
alembic_current= 'users_db.commands:db_current_cmd'
alembic_revision = 'users_db.commands:db_revision_cmd'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
